--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <div class="container">
   <div class="mapandtable row">
     <div class="col-9">
-      <img src="C:\Users\aifau\Downloads\worldmap.jpg" style="height:75vh"class="worldmap img-fluid" >
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRtaZg6rnyVFOK69Gy4LXbsm5eCYAO6H1j81w&usqp=CAU" style="height:75vh"class="worldmap img-fluid" >
     </div>
     <div class="col-1" style="height:50vh">
      
